--- a/admin/templates/settings.html
+++ b/admin/templates/settings.html
@@ -44,7 +44,7 @@
         </div>
 
         <!-- Jumma Pass -->
-        <div class="mt-8 border-t pt-6">
+        <div class="mt-8 border-t pt-6" id="jumma_pass_settings">
             <h4 class="text-md font-medium text-gray-800">Special Passes</h4>
             <div class="flex items-start mt-4">
                 <div class="flex items-center h-5">
