--- a/auth/templates/login.html
+++ b/auth/templates/login.html
@@ -21,6 +21,7 @@
           Login
         </button>
       </div>
+        <!-- Forgot-password links removed; password resets are admin-only -->
     </form>
   </div>
 </div>
